Fix feature alignments

--- a/_sass/_landing_page.sass
+++ b/_sass/_landing_page.sass
@@ -65,7 +65,6 @@
   .feature
     font-size: 1.5em
 
-
 @media screen and (min-width: 800px)
   .landing-page
     .jumbo
@@ -76,9 +75,6 @@
 
     .features-wrapper
       width: 100%
-
-    .features
-      width: 60%
 
       strong
         font-size: 1.2em
@@ -96,7 +92,13 @@
       &:first-child
         float: left
 
+@media screen and (min-width: 1000px)
+  .features
+    width: 80%
 
+@media screen and (min-width: 1200px)
+  .features
+    width: 60%
 
 @media screen and (max-width: 1500px)
   .landing-page
